# snel.sh

./: .gitignore  README.md  pyproject.toml
snel/: __main__.py
tests/: test_snel.py
