[tool.poetry]
name = "snel"
version = "0.1.0"
description = "a non-linear shell wrapper for interactive terminals"
authors = ["Seth Woodworth <seth@sethish.com>"]

[tool.poetry.dependencies]
python = "^3.7"
prompt_toolkit = "^3.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"
pytest-mock = "^3.0.0"
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
